# Q3

./: .gitignore
Bonus/: BasicStrategy.cpp  BasicStrategy.h  CMakeLists.txt  FrequencyLengthStrategy.cpp  FrequencyLengthStrategy.h  FrequencyTextStrategy.cpp  FrequencyTextStrategy.h  Makefile  State.cpp  State.h  Strategy.cpp  Strategy.h  UML.uxf  description.txt  hangman  hangman.cpp  hangman_  original
Bonus/tests/: .basic1  .fullguesses1  .long1  .seeded1  fullguesses.in  long.in
Q1/: .test.swp  CMakeLists.txt  IteratorTestHarness.cpp  IteratorTestHarness.d  Makefile  Menu.cpp  Menu.d  Menu.h  MenuComponent.cpp  MenuComponent.d  MenuComponent.h  MenuItem.cpp  MenuItem.d  MenuItem.h  menu  test
Q1/tests/: .basic2
Q2a/: IteratorTestHarness.cpp  menu  menuMaster
Q2a/tests/: basic.in
Q2b/: IteratorTestHarness.cpp  MenuComponent.cpp  MenuComponent.h  MenuItem.h  menuMaster  test
Q2b/tests/: .menuitems2  advanced.in  basic.in  menuitems.in  samemenus.in
Q2c/: IteratorTestHarness.cpp  menuMaster
Q2c/tests/: .advanced2  advanced.in  basic.in  menuitems.in  samemenus.in
Q2d/: CMakeLists.txt  IteratorTestHarness.cpp  menuMaster
Q2d/tests/: .advanced.in.swp  .samemenus.in.swp  advanced.in  basic.in
Q2e/: IteratorTestHarness.cpp  Menu.h  menu  menuMaster
Q2e/tests/: advanced.in  menuitems.in  samemenus.in
Q2f/: IteratorTestHarness.cpp  MenuComponent.h  menu  menuMaster
Q2f/tests/: basic.in
Q3/: CMakeLists.txt  Makefile  gamewords  hangman  hangman.cpp  test
Q3/tests/: .basic.in.swp  .long.in.swp  basic.in  fullguesses.in  seeded.in
